--- a/A_dbms/templates/dbms/agree/extra/js-agree-add.html
+++ b/A_dbms/templates/dbms/agree/extra/js-agree-add.html
@@ -38,7 +38,7 @@
                         window.location.reload();
                     } else {
                         alert(arg.message);
-                        $('#e_agree_amount').text(dict.forme.agree_amount);
+                        $('#e_agree_amount').text(arg.forme.agree_amount);
                     }
                 }
             })
