--- a/A_dbms/templates/dbms/meeting/article/detail/content.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content.html
@@ -14,6 +14,12 @@
 
     <div role="tabpanel"
          class="tab-pane"
+         id="lending_order"><!--放款次序-->
+        {% include 'dbms/meeting/article/detail/content/lending_order.html' %}
+    </div>
+
+    <div role="tabpanel"
+         class="tab-pane"
          id="sign"><!--签批详情-->
         {% include 'dbms/meeting/article/detail/content/sign.html' %}
     </div>
