--- a/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
@@ -1,13 +1,13 @@
 <div id="form_house_add_edit">
 
     <div class="form-group"><!--房产编号-->
-        <label for="id_warrant_numg" class="col-sm-3 control-label">
+        <label for="id_warrant_num" class="col-sm-3 control-label">
             {{ form_house_add_edit.warrant_num.label }}：
         </label>
         <div class="col-sm-9">
             {{ form_house_add_edit.warrant_num }}
         </div>
-        <label id="e_lending" class="pull-right">
+        <label id="e_warrant_num" class="pull-right">
             {{ form_house_add_edit.warrant_num.errors }}
         </label>
     </div>
