--- a/A_dbms/templates/dbms/meeting/article/detail/present.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/present.html
@@ -31,6 +31,16 @@
         </a>
     </li>
 
+     <li role="presentation">
+        <a href="#lending_order"
+           style="background-color: #f5f5f5"
+           aria-controls="messages"
+           role="tab"
+           data-toggle="tab">
+            放款次序
+        </a>
+    </li>
+
     <li role="presentation">
         <a href="#sign"
            style="background-color: #f5f5f5"
