--- a/A_dbms/templates/dbms/warrant/house/scan/house-summry.html
+++ b/A_dbms/templates/dbms/warrant/house/scan/house-summry.html
@@ -2,12 +2,18 @@
     <div class="panel-heading">
         <label>房产情况</label>
         <label class="navbar-right">
+            <a class="btn btn-primary btn-sm " id="storages">
+                出入库
+            </a><!--#path('warrant/storages/'-->
+            <a class="btn btn-primary btn-sm " id="evaluate">
+                评估
+            </a><!--#path('warrant/evaluate/'-->
             <a class="btn btn-primary btn-sm " id="editWarrant">
                 修改
-            </a><!--#path('custom/edit/'-->
+            </a><!--#path('warrant/edit/'-->
             <a class="btn btn-danger btn-sm " id="delWarrant">
                 删除
-            </a><!--#path('custom/del/'-->
+            </a><!--#path('warrant/del/'-->
         </label>
     </div>
 
