--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -1,12 +1,12 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}编辑项目{% endblock %}
+{% block title %}合同预览{% endblock %}
 
 {% block right-content-container %}
 
     <div class="container-fluid" style="padding-left: 1px;">
-        {% include 'dbms/agree/scan/summry.html' %}
-        {% include 'dbms/agree/scan/nav_tab.html' %}
+        {% include 'dbms/agree/scan/agree-summry.html' %}
+        {% include 'dbms/agree/scan/agree-tab.html' %}
         {% include 'dbms/agree/modl/counter-add-mod.html' %}
     </div>
 {% endblock %}
