--- a/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
+++ b/A_dbms/templates/dbms/warrant/modl/mod_form/house-add-edit.html
@@ -1,16 +1,4 @@
-<div id="form_house_add_edit">
-
-    <div class="form-group"><!--房产编号-->
-        <label for="id_warrant_num" class="col-sm-3 control-label">
-            {{ form_house_add_edit.warrant_num.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_house_add_edit.warrant_num }}
-        </div>
-        <label id="e_warrant_num" class="pull-right">
-            {{ form_house_add_edit.warrant_num.errors }}
-        </label>
-    </div>
+<div id="form_house_add_edit" class="warrant-extend" style="display: none">
 
     <div class="form-group"><!--坐落-->
         <label for="id_house_locate" class="col-sm-3 control-label">
@@ -23,7 +11,6 @@
             {{ form_house_add_edit.house_locate.errors }}
         </label>
     </div>
-
 
     <div class="form-group"><!--用途-->
         <label for="id_house_app" class="col-sm-3 control-label">
