--- a/A_dbms/templates/dbms/warrant/warrant.html
+++ b/A_dbms/templates/dbms/warrant/warrant.html
@@ -6,9 +6,9 @@
 {% block right-content-container %}
     {% include 'dbms/warrant/warrant/warrant-filter.html' %}
     {% include 'dbms/warrant/warrant/warrant-table.html' %}
+    {% include 'dbms/warrant/modl/warrant-add-mod.html' %}
 {% endblock %}
 
 {% block extra-js %}
-
-
+    {% include 'dbms/warrant/extra/js-warrant-add.html' %}
 {% endblock %}
