--- a/A_dbms/templates/dbms/agree/agree.html
+++ b/A_dbms/templates/dbms/agree/agree.html
@@ -4,8 +4,8 @@
 
 
 {% block right-content-container %}
-    {% include 'dbms/agree/agree/filter.html' %}
-    {% include 'dbms/agree/agree/table.html' %}
+    {% include 'dbms/agree/agree/agree-filter.html' %}
+    {% include 'dbms/agree/agree/agree-table.html' %}
     {% include 'dbms/agree/modl/agree-add-mod.html' %}
 {% endblock %}
 
