--- a/A_dbms/templates/dbms/meeting/article/detail/present.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/present.html
@@ -1,55 +1,14 @@
 <ul class="nav nav-tabs"
     role="tablist"
     style="background-color: #f5f5f5">
-{#    <li role="presentation" class="active">#}
-{#        <a href="#expert"#}
-{#           style="background-color: #f5f5f5"#}
-{#           aria-controls="profile"#}
-{#           role="tab"#}
-{#           data-toggle="tab">#}
-{#            评审委员#}
-{#        </a>#}
-{#    </li>#}
-
     <li role="presentation" class="active">
-        <a href="#comment"
+        <a href="#expert"
            style="background-color: #f5f5f5"
            aria-controls="profile"
            role="tab"
            data-toggle="tab">
-            评委意见
+            评审委员
         </a>
     </li>
-
-    <li role="presentation">
-        <a href="#single"
-           style="background-color: #f5f5f5"
-           aria-controls="messages"
-           role="tab"
-           data-toggle="tab">
-            单项额度
-        </a>
-    </li>
-
-     <li role="presentation">
-        <a href="#lending_order"
-           style="background-color: #f5f5f5"
-           aria-controls="messages"
-           role="tab"
-           data-toggle="tab">
-            放款次序
-        </a>
-    </li>
-
-    <li role="presentation">
-        <a href="#sign"
-           style="background-color: #f5f5f5"
-           aria-controls="messages"
-           role="tab"
-           data-toggle="tab">
-            签批详情
-        </a>
-    </li>
-
 
 </ul>
