--- a/A_dbms/templates/dbms/meeting/scan/meeting-summry.html
+++ b/A_dbms/templates/dbms/meeting/scan/meeting-summry.html
@@ -24,16 +24,16 @@
 
     <div class="panel-body row" style="padding: 1px;">
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审会编号：{{ meeting_obj.num }}
+            评审编号：{{ meeting_obj.num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审会类型：{{ meeting_obj.get_review_model_display }}
+            评审类型：{{ meeting_obj.get_review_model_display }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审会日期：{{ meeting_obj.review_date }}
+            评审日期：{{ meeting_obj.review_date }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审会状态：{{ meeting_obj.get_meeting_state_display }}
+            会议状态：{{ meeting_obj.get_meeting_state_display }}
         </label>
     </div>
 </div>
