--- a/A_dbms/templates/dbms/appraisal/extra/js-single-add.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-single-add.html
@@ -24,7 +24,7 @@
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr)
             $.ajax({
-                url: '/dbms/meeting/single/',
+                url: '/dbms/appraisal/single/add/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
