--- a/A_dbms/templates/dbms/meeting/article/detail/content.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content.html
@@ -2,26 +2,8 @@
 
     <div role="tabpanel"
          class="tab-pane active"
-         id="comment"><!--评审意见-->
-        {% include 'dbms/meeting/article/detail/content/comment.html' %}
-    </div>
-
-    <div role="tabpanel"
-         class="tab-pane"
-         id="single"><!--单项额度-->
-        {% include 'dbms/meeting/article/detail/content/single.html' %}
-    </div>
-
-    <div role="tabpanel"
-         class="tab-pane"
-         id="lending_order"><!--放款次序-->
-        {% include 'dbms/meeting/article/detail/content/lending_order.html' %}
-    </div>
-
-    <div role="tabpanel"
-         class="tab-pane"
-         id="sign"><!--签批详情-->
-        {% include 'dbms/meeting/article/detail/content/sign.html' %}
+         id="expert"><!--评审委员-->
+        {% include 'dbms/meeting/article/detail/content/experts.html' %}
     </div>
 
 </div>
