--- a/A_dbms/templates/dbms/appraisal/extra/js-lending-del.html
+++ b/A_dbms/templates/dbms/appraisal/extra/js-lending-del.html
@@ -5,7 +5,7 @@
     });
 
     function bindDelLendingB() {
-        $('#lending-tb').on('click', '.delLendingB', function () {
+        $('#lending-tb').on('click', '.delLendingOrderB', function () {
             console.log("bindDelLendingB")
             delLendingNid = $(this).parent().parent().attr('lending-nid');
             console.log(delLendingNid)
