--- a/A_dbms/templates/dbms/appraisal/modl/single-del-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/single-del-mod.html
@@ -4,7 +4,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="delSingleQuotaModalLabel">
-                    取消上会
+                    取消单项额度
                     <input style="display: none" name="article_id"
                            value="{{ article_obj.id }}">
                     <input style="display: none" name="single_id"
