--- a/A_dbms/templates/dbms/appraisal/scan/tab/content/comment.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/content/comment.html
@@ -11,7 +11,9 @@
             <th>评审委员</th>
             <th>评委意见</th>
             <th>意见详情</th>
-            <th>操作</th>
+            {% if not lending_obj %}
+                <th>操作</th>
+            {% endif %}
         </tr>
         </thead>
         <tbody>
@@ -32,11 +34,13 @@
                         {% endif %}
                     {% endfor %}
                 </td>
-                <td>
-                    <a class="btn btn-primary btn-xs expert-comment">
-                        评审意见
-                    </a>
-                </td>
+                {% if not lending_obj%}
+                    <td>
+                        <a class="btn btn-primary btn-xs expert-comment">
+                            评审意见
+                        </a>
+                    </td>
+                {% endif %}
             </tr>
         {% endfor %}
         </tbody>
