--- a/A_dbms/templates/dbms/warrant/modl/warrant-del-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-del-mod.html
@@ -6,7 +6,7 @@
                 <h4 class="modal-title" id="delWarrantModalLabel">
                     {{ del_warrant }}
                     <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.warrant.id }}>
+                           id="id_warrant_id" value={{ warrant_obj.id }}>
                 </h4>
             </div>
             <div class="modal-body">
