--- a/A_dbms/templates/dbms/warrant/warrant/scan/tab/warrant-present.html
+++ b/A_dbms/templates/dbms/warrant/warrant/scan/tab/warrant-present.html
@@ -20,13 +20,23 @@
         </a>
     </li>
 
-    <li role="presentation" class="active">
+    <li role="presentation">
         <a href="#mortgage"
            style="background-color: #f5f5f5"
            aria-controls="settings"
            role="tab"
            data-toggle="tab">
             抵押情况
+        </a>
+    </li>
+
+    <li role="presentation" class="active">
+        <a href="#ownership"
+           style="background-color: #f5f5f5"
+           aria-controls="profile"
+           role="tab"
+           data-toggle="tab">
+            产权人
         </a>
     </li>
 
