--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry-body.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry-body.html
@@ -1,15 +1,4 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <label>项目情况</label>
-        <label class="navbar-right">
-            <a class="btn btn-primary btn-sm " id="GuaranteeB">
-                反担保
-            </a> <!--#path('meeting/lending/'-->
-        </label>
-    </div>
-
-    <div class="panel-body row" style="padding: 1px;">
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             客户名称：{{ article_obj.custom }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -40,7 +29,8 @@
             担保期限：{{ article_obj.credit_term }}个月
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            签批日期：{{ article_obj.sign_date }}
+        </label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             项目状态：{{ article_obj.get_article_state_display }}
         </label>
-    </div>
-</div>
