--- a/A_dbms/templates/dbms/appraisal/scan/tab/content/lending_order.html
+++ b/A_dbms/templates/dbms/appraisal/scan/tab/content/lending_order.html
@@ -11,7 +11,10 @@
             <th>发放次序</th>
             <th>拟放金额（元）</th>
             <th>已放金额（元）</th>
-            <th>操作</th>
+            {% if not lending_obj %}
+                <th>操作</th>
+            {% endif %}
+
         </tr>
         </thead>
         <tbody id="lending-tb">
@@ -40,11 +43,13 @@
                 {% endif %}
                 <td>{{ lending.order_amount }}</td>
                 <td>{{ lending.amount }}</td>
-                <td>
-                    <a class="btn btn-danger btn-xs delLendingB">
-                        删除
-                    </a>
-                </td>
+                {% if not lending_obj %}
+                    <td>
+                        <a class="btn btn-danger btn-xs delLendingOrderB">
+                            删除
+                        </a>
+                    </td>
+                {% endif %}
             <tr>
         {% endfor %}
         </tbody>
