--- a/A_dbms/templates/dbms/article/agree/article-agree-summry.html
+++ b/A_dbms/templates/dbms/article/agree/article-agree-summry.html
@@ -2,14 +2,14 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm " id="feedbackArticle">
-                反馈
+            <a class="btn btn-primary btn-sm " id="providesB">
+                放款
             </a><!--#path('article/del/'-->
-            <a class="btn btn-primary btn-sm " id="editArticle">
-                修改
+            <a class="btn btn-primary btn-sm " id="repaymentB">
+                回款
             </a><!--#path('article/del/'-->
-            <a class="btn btn-danger btn-sm " id="delArticle">
-                删除
+            <a class="btn btn-danger btn-sm " id="compensatoryB">
+                代偿
             </a><!--#path('article/del/'-->
         </label>
     </div>
