--- a/A_dbms/templates/dbms/meeting/modl/mod_form/article-sign.html
+++ b/A_dbms/templates/dbms/meeting/modl/mod_form/article-sign.html
@@ -48,6 +48,18 @@
         </label>
     </div>
 
+    <div class="form-group"><!--客户总额度-->
+        <label for="id_credit_amount" class="col-sm-3 control-label">
+            {{ form_article_sign.credit_amount.label }}：
+        </label>
+        <div class="col-sm-9">
+            {{ form_article_sign.credit_amount }}
+        </div>
+        <label id="e_credit_amount" class="pull-right">
+            {{ form_article_sign.credit_amount.errors }}
+        </label>
+    </div>
+
     <div class="form-group"><!--签批详情-->
         <label for="id_sign_detail" class="col-sm-3 control-label">
             {{ form_article_sign.sign_detail.label }}：
