--- a/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/warrant-edit-mod.html
@@ -10,7 +10,7 @@
                 <h4 class="modal-title" id="editWarrantModalLabel">
                     {{ edit_warrant }}
                     <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.warrant.id }}>
+                           id="id_warrant_id" value={{ warrant_obj.id }}>
                     <input style="display: none" name="warrant_typ_n"
                            id="id_warrant_typ_n" value={{ warrant_typ_n }}>
                 </h4>
