--- a/A_dbms/templates/dbms/warrant/warrant/scan/warrant-summry.html
+++ b/A_dbms/templates/dbms/warrant/warrant/scan/warrant-summry.html
@@ -2,28 +2,37 @@
     <div class="panel-heading">
         <label>房产情况</label>
         <label class="navbar-right">
+            <a class="btn btn-primary btn-sm " id="addOwerShip">
+                添加产权证
+            </a><!--#path('warrant/storages/'-->
             <a class="btn btn-primary btn-sm " id="editWarrant">
                 修改
-            </a><!--#path('custom/edit/'-->
+            </a><!--#path('warrant/edit/'-->
+            <a class="btn btn-primary btn-sm " id="storages">
+                出入库
+            </a><!--#path('warrant/storages/'-->
+            <a class="btn btn-primary btn-sm " id="evaluate">
+                评估
+            </a><!--#path('warrant/evaluate/'-->
             <a class="btn btn-danger btn-sm " id="delWarrant">
                 删除
-            </a><!--#path('custom/del/'-->
+            </a><!--#path('warrant/del/'-->
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
         <div class="panel-body row">
             <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                权证编号：{{ house_obj.warrant }}
+                权证编号：{{ warrant_obj.warrant_num }}
             </label>
             <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                坐落：{{ house_obj.house_locate }}
+                坐落：{{ warrant_obj.house_warrant.house_locate }}
             </label>
             <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                用途：{{ house_obj.get_house_app_display }}
+                用途：{{ warrant_obj.house_warrant.get_house_app_display }}
             </label>
             <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                建筑面积：{{ house_obj.house_area }}
+                建筑面积：{{ warrant_obj.house_warrant.house_area }}
             </label>
         </div>
     </div>
