--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -12,30 +12,12 @@
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
-        <div class="panel-body row">
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                客户名称：{{ custom_obj.name }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                所属行业：{{ custom_obj.idustry }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                所属区域：{{ custom_obj.district }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                客户类型：{{ custom_obj.get_genre_display }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                授信总额：{{ custom_obj.credit_amount }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                流贷余额：{{ custom_obj.flow_loan }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                承兑余额：{{ custom_obj.accept_loan }}
-            </label>
-            <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                保函余额：{{ custom_obj.back_loan }}
-            </label>
-        </div>
+        {% if custom_obj.genre == 1 %}
+            {% include 'dbms/custom/scan/custom-summry-c.html' %}
+        {% else %}
+            {% include 'dbms/custom/scan/custom-summry-p.html' %}
+
+        {% endif %}
+
     </div>
+</div>
